# cmd/swagger/docs/swagger.yaml
@@ -48,6 +48,8 @@ definitions:
         type: string
       id:
         type: integer
+      match_type:
+        $ref: '#/definitions/match.MatchType'
       name:
         type: string
       owner_id:
@@ -129,6 +131,11 @@ definitions:
       access_token:
         type: string
       refresh_token:
+        type: string
+    type: object
+  dto.UpdateSelfInfoReq:
+    properties:
+      name:
         type: string
     type: object
   dto.User:
@@ -248,6 +255,30 @@ paths:
       security:
       - BearerAuth: []
       summary: 获取用户信息
+      tags:
+      - Account
+  /account/me/update:
+    post:
+      consumes:
+      - application/json
+      description: 更新用户信息
+      parameters:
+      - description: 更新用户信息请求体
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateSelfInfoReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ginutils.Ret-any'
+      security:
+      - BearerAuth: []
+      summary: 更新用户信息
       tags:
       - Account
   /account/refresh:
